--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,14 +26,14 @@ jobs:
       # this will create a venv to be used with this job,
       # it will be cache automatically and loaded for each run
       # the requirements file defines what packages will be cached, but will not install them
-      - uses: actions/setup-python@v4
-        name: create cachable pip venv (load/store automatically)
-        with:
-          python-version: "3.9"
-          cache: "pip" # caching pip dependencies
-          cache-dependency-path: |
-            requirements.txt
-            requirements_manually_installed.txt
+      # - uses: actions/setup-python@v4
+      #   name: create cachable pip venv (load/store automatically)
+      #   with:
+      #     python-version: "3.9"
+      #     cache: "pip" # caching pip dependencies
+      #     cache-dependency-path: |
+      #       requirements.txt
+      #       requirements_manually_installed.txt
 
       # define a cache
       - name: load and store Cached folders (stores only if workflow build successfully)
@@ -197,6 +197,7 @@ jobs:
         continue-on-error: true
         run: |
           echo "$VIRTUAL_ENV_PROMPT pip show: kivy & brainflow        VIRTUAL_ENV= $VIRTUAL_ENV"
+          echo "PATH: $PATH"
           pip show brainflow kivy kivy-garden
           echo "$VIRTUAL_ENV_PROMPT pip list       VIRTUAL_ENV= $VIRTUAL_ENV"
           pip list
