--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,8 @@ jobs:
       - name: install ubuntu packages for buildozer
         run: |
           sudo apt update
-          sudo apt install -y build-essential git python3 python3-pip zlib1g-dev openjdk-8-jdk autoconf libtool pkg-config zlib1g-dev libffi-dev libssl-dev -y
-          sudo apt install libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev -y
+          sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev aidl
+          sudo apt install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
 
       # define a cache
       - name: load and store Cached folders (stores only if workflow build successfully)
