--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,11 +34,12 @@ jobs:
       #     cache-dependency-path: |
       #       requirements.txt
       #       requirements_manually_installed.txt
-      - name: install ubuntu packages for buildozer
-        run: |
-          sudo apt update
-          sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev aidl
-          sudo apt install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
+
+      # - name: install ubuntu packages for buildozer
+      #   run: |
+      #     sudo apt update
+      #     sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev aidl
+      #     sudo apt install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
 
       # define a cache
       - name: load and store Cached folders (stores only if workflow build successfully)
@@ -49,7 +50,7 @@ jobs:
         with:
           path: |
             .buildozer_global
-            .buildozer
+            # .buildozer
             #.venv
             brainflow
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('buildozer.spec') }}
@@ -212,19 +213,16 @@ jobs:
           pip freeze
           #python -c "from brainflow.board_shim import BoardShim; print( 'Brainflow version: ' + BoardShim.get_version() )"
 
-      #---compile with buildozer
+      ---compile with buildozer
 
-      # - name: Build with Buildozer
-      #   uses: ArtemSBulgakov/buildozer-action@v1
-      #   id: buildozer
-      #   with:
-      #     command: buildozer android debug
-      #     buildozer_version: master
+       - name: Build with Buildozer
+         uses: ArtemSBulgakov/buildozer-action@v1
+         id: buildozer
+         with:
+           # command: echo "run before, eg load venv" ; buildozer android debug
+           command: buildozer android debug
+           buildozer_version: master
 
-      - name: Activate venv and build with Buildozer
-        run: |
-          # source <path-to-your-venv>/bin/activate
-          python -m buildozer android debug
 
       # remove all prev arefacts (otherwise the artefacts quota might be triggered -its monthly)
       # or set to public repo (maybe need to wait a while untill github updated the stats)
