--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       #     sudo apt install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
 
       # define a cache
-      - name: load and store Cached folders (stores only if workflow build successfully)
+      - name: load and store Cached main folders (stores only if workflow build successfully)
         id: cache-buildozer
         uses: actions/cache@v3
         env:
@@ -50,9 +50,31 @@ jobs:
         with:
           path: |
             .buildozer_global
-            # .buildozer  # not recommended to cache->python packages will not be updated
+            # not recommended to cache .buildozer ->python packages will not be updated
+            # but it really speeds up the build!
+            #.buildozer  
             #.venv
             brainflow
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('buildozer.spec') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      # define a cache
+      - name: load and store Cached .buildozer (local) folders
+        id: cache-buildozer-local
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-buildozer-local
+        with:
+          path: |
+            #.buildozer_global
+            # not recommended to cache .buildozer ->python packages will not be updated
+            # but it really speeds up the build!
+            .buildozer  
+            #.venv
+            #brainflow
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('buildozer.spec') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -129,89 +151,90 @@ jobs:
       #      echo "$VIRTUAL_ENV_PROMPT pip list"
       #      pip list
 
-      # now done through the requirements.txt file
-      - name: pip install requirements / dependencies
-        run: |
-          echo "--pip list before---"
-          pip list
-          pip install -r "requirements.txt"
-          echo "--pip list after---"
-          pip list
-          # python -m pip install --upgrade pip
-          # python -m pip install "kivy[base,media]" kivy_examples
-          # python -m pip install matplotlib ninja numpy cmake
-          # pip install -r requirements.txt
-
-      - name: try to install brainflow from cache
-        continue-on-error: true
-        run: |
-          echo "--pip list before---"
-          pip list
-          pip install -r "requirements_manually_installed.txt"
-          echo "--pip list after---"
-          pip list
-
-      - name: (venv) pip list & Kivy and brainflow details (last check before compiling)
-        continue-on-error: true
-        run: |
-          echo "--pip list: VIRTUAL_ENV= $VIRTUAL_ENV"
-          pip list
-          #python -c "import kivy; print(f'Kivy version: {kivy.__version__}')"
-          echo "--pip show: kivy & brainflow"
-          pip show brainflow kivy kivy-garden
-
-          #  # if dir brainflow exists, this will just throw an error and give up
-          #  - name: Clone brainflow repository
-          #    continue-on-error: true
-          #    uses: actions/checkout@v3
-          #    with:
-          #      repository: brainflow-dev/brainflow
-          #      ref: master # specify the branch or commit you want to clone
-          #      path: brainflow # specify the destination directory where you want to clone
-
-      - name: Compile brainflow
-        run: |
-          if ! pip show brainflow; then
-            echo "brainflow package not yet installed. compiling and installing..."
-            # download the sourcefiles
-            if [ ! -d "brainflow" ]; then
-              git clone --single-branch --branch master https://github.com/brainflow-dev/brainflow.git
-            else
-              echo "already downloaded git repository found in cache. go straight to comipling.. "
-            fi
-            cd brainflow
-            #rm build/* -rf
-            cd tools
-            python build.py
-            cd ../python_package
-            python -m pip install -U .
-            cd ../..
-          else
-            echo "brainflow package already installed. skip compiling."
-          fi
-          # if [ -f "build/libBrainflow.a" ] && \
-          #    [ -f "build/libDSPFilters.a" ] && \
-          #    [ -f "build/libWaveLib.a" ] && \
-          #    [ -f "build/libkissfft-double.a" ]; then
-          #   # Run your command here
-          #   echo "All files exist, no need to comiple"
-          # else
-          #   echo "One or more files are missing, removing build dir and run build.py"
-          # fi
-
-      - name: Check Brainflow version
-        continue-on-error: true
-        run: |
-          echo "$VIRTUAL_ENV_PROMPT pip show: kivy & brainflow        VIRTUAL_ENV= $VIRTUAL_ENV"
-          echo "PATH: $PATH"
-          pip show brainflow kivy kivy-garden
-          echo "$VIRTUAL_ENV_PROMPT pip list       VIRTUAL_ENV= $VIRTUAL_ENV"
-          pip list
-          # echo "----content of .venv/lib/python*/site-packages"
-          # ls -lA .venv/lib/python*/site-packages/
-          echo "----list pip in requirements.txt syntax---"
-          pip freeze
-          #python -c "from brainflow.board_shim import BoardShim; print( 'Brainflow version: ' + BoardShim.get_version() )"
+      #      # now done through the requirements.txt file
+      #      # seems like buildozer ignores all locally installed packages and downloads them again
+      #      - name: pip install requirements / dependencies
+      #        run: |
+      #          echo "--pip list before---"
+      #          pip list
+      #          pip install -r "requirements.txt"
+      #          echo "--pip list after---"
+      #          pip list
+      #          # python -m pip install --upgrade pip
+      #          # python -m pip install "kivy[base,media]" kivy_examples
+      #          # python -m pip install matplotlib ninja numpy cmake
+      #          # pip install -r requirements.txt
+      #
+      #      - name: try to install brainflow from cache
+      #        continue-on-error: true
+      #        run: |
+      #          echo "--pip list before---"
+      #          pip list
+      #          pip install -r "requirements_manually_installed.txt"
+      #          echo "--pip list after---"
+      #          pip list
+      #
+      #      - name: (venv) pip list & Kivy and brainflow details (last check before compiling)
+      #        continue-on-error: true
+      #        run: |
+      #          echo "--pip list: VIRTUAL_ENV= $VIRTUAL_ENV"
+      #          pip list
+      #          #python -c "import kivy; print(f'Kivy version: {kivy.__version__}')"
+      #          echo "--pip show: kivy & brainflow"
+      #          pip show brainflow kivy kivy-garden
+      #
+      #          #  # if dir brainflow exists, this will just throw an error and give up
+      #          #  - name: Clone brainflow repository
+      #          #    continue-on-error: true
+      #          #    uses: actions/checkout@v3
+      #          #    with:
+      #          #      repository: brainflow-dev/brainflow
+      #          #      ref: master # specify the branch or commit you want to clone
+      #          #      path: brainflow # specify the destination directory where you want to clone
+      #
+      #      - name: Compile brainflow
+      #        run: |
+      #          if ! pip show brainflow; then
+      #            echo "brainflow package not yet installed. compiling and installing..."
+      #            # download the sourcefiles
+      #            if [ ! -d "brainflow" ]; then
+      #              git clone --single-branch --branch master https://github.com/brainflow-dev/brainflow.git
+      #            else
+      #              echo "already downloaded git repository found in cache. go straight to comipling.. "
+      #            fi
+      #            cd brainflow
+      #            #rm build/* -rf
+      #            cd tools
+      #            python build.py
+      #            cd ../python_package
+      #            python -m pip install -U .
+      #            cd ../..
+      #          else
+      #            echo "brainflow package already installed. skip compiling."
+      #          fi
+      #          # if [ -f "build/libBrainflow.a" ] && \
+      #          #    [ -f "build/libDSPFilters.a" ] && \
+      #          #    [ -f "build/libWaveLib.a" ] && \
+      #          #    [ -f "build/libkissfft-double.a" ]; then
+      #          #   # Run your command here
+      #          #   echo "All files exist, no need to comiple"
+      #          # else
+      #          #   echo "One or more files are missing, removing build dir and run build.py"
+      #          # fi
+      #
+      #      - name: Check Brainflow version
+      #        continue-on-error: true
+      #        run: |
+      #          echo "$VIRTUAL_ENV_PROMPT pip show: kivy & brainflow        VIRTUAL_ENV= $VIRTUAL_ENV"
+      #          echo "PATH: $PATH"
+      #          pip show brainflow kivy kivy-garden
+      #          echo "$VIRTUAL_ENV_PROMPT pip list       VIRTUAL_ENV= $VIRTUAL_ENV"
+      #          pip list
+      #          # echo "----content of .venv/lib/python*/site-packages"
+      #          # ls -lA .venv/lib/python*/site-packages/
+      #          echo "----list pip in requirements.txt syntax---"
+      #          pip freeze
+      #          #python -c "from brainflow.board_shim import BoardShim; print( 'Brainflow version: ' + BoardShim.get_version() )"
 
       #---compile with buildozer
       # tips & tricks https://github.com/ArtemSBulgakov/buildozer-action
