--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -256,7 +256,7 @@ jobs:
         id: buildozer
         with:
           # command: echo "run before, eg load venv" ; buildozer android debug
-          command: echo "xxuxx pip packages" ; pip list ; pip installl setuptools ; buildozer android_new debug ; pip list
+          command: echo "xxuxx pip packages" ; pip list ; pip installl setuptools ; buildozer android ; pip list
           buildozer_version: master
 
       # remove all prev arefacts (otherwise the artefacts quota might be triggered -its monthly)
@@ -269,7 +269,7 @@ jobs:
       #     script: |
       #       const res = await github.rest.actions.listArtifactsForRepo({
       #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
+      #         repo: context.repo.repo,https://m.youtube.com/watch?v=IflfP4XwzAI&pp=ygUXZWxvbiBtdXNrIGJiYyBpbnRlcnZpZXc%3D
       #       })
 
       #       res.data.artifacts
