--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -288,6 +288,7 @@ jobs:
         run: echo "NOW=$(date +'%Y.%m.%d_%H%M')" >> $GITHUB_ENV
 
       - name: Upload artifacts
+        continue-on-error: true
         uses: actions/upload-artifact@v3
         with:
           name: "mykivy-${{ github.event.head_commit.message }}-${{ env.NOW }}"
