--- a/requirements.txt
+++ b/requirements.txt
@@ -8,47 +8,47 @@
 # numpy                       # latest
 
 
-#certifi==2022.12.7
-#cffi==1.15.1
-#charset-normalizer==3.1.0
-#cmake==3.26.3
-#contourpy==1.0.7
-#cycler==0.11.0
-#docutils==0.19
-#enum-compat==0.0.3
-#ffpyplayer==4.5.0
-#fonttools==4.39.3
-#idna==3.4
-#jedi==0.18.2
-#Kivy==2.1.0
-#Kivy-examples==2.1.0
-#Kivy-Garden==0.1.5
-#kiwisolver==1.4.4
-#matplotlib==3.7.1
-#ninja==1.11.1
-#nptyping==1.4.4
-#numpy==1.24.2
-#packaging==23.1
-#pandas==2.0.0
-#parso==0.8.3
-#Pillow==9.5.0
-#pudb==2022.1.3
-#pycparser==2.21
-#pygatt==4.0.5
-#Pygments==2.15.0
-#pyparsing==3.0.9
-#pyserial==3.5
-#python-dateutil==2.8.2
-#pytz==2023.3
-#requests==2.28.2
-#six==1.16.0
-#toml==0.10.2
-#typish==1.9.3
-#tzdata==2023.3
-#urllib3==1.26.15
-#urwid==2.1.2
-#urwid-readline==0.13
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cmake==3.26.3
+contourpy==1.0.7
+cycler==0.11.0
+docutils==0.19
+enum-compat==0.0.3
+ffpyplayer==4.5.0
+fonttools==4.39.3
+idna==3.4
+jedi==0.18.2
+Kivy==2.1.0
+Kivy-examples==2.1.0
+Kivy-Garden==0.1.5
+kiwisolver==1.4.4
+matplotlib==3.7.1
+ninja==1.11.1
+nptyping==1.4.4
+numpy==1.24.2
+packaging==23.1
+pandas==2.0.0
+parso==0.8.3
+Pillow==9.5.0
+pudb==2022.1.3
+pycparser==2.21
+pygatt==4.0.5
+Pygments==2.15.0
+pyparsing==3.0.9
+pyserial==3.5
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.28.2
+six==1.16.0
+toml==0.10.2
+typish==1.9.3
+tzdata==2023.3
+urllib3==1.26.15
+urwid==2.1.2
+urwid-readline==0.13
 #buildozer
-Cython==0.29.33
+#Cython==0.29.33
 virtualenv
 setuptools
