--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/setup-python@v4
         name: create download cache for pip packages (load/store automatically)
         with:
-          python-version: "3.10.6"
+          python-version: "3.9"
           cache: "pip" # caching pip dependencies
           cache-dependency-path: |
             requirements.txt
@@ -256,7 +256,7 @@ jobs:
         id: buildozer
         with:
           # command: echo "run before, eg load venv" ; buildozer android debug
-          command: echo "xxuxx pip packages" ; pip list ; python --version ; pip install setuptools,pyglossary ; buildozer android debug ; pip list
+          command: buildozer android debug ; pip list
           buildozer_version: master
 
       # remove all prev arefacts (otherwise the artefacts quota might be triggered -its monthly)
