--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ pyparsing==3.0.9
 pyserial==3.5
 python-dateutil==2.8.2
 pytz==2023.3
-requests==2.28.2
+requests>=2.31.0
 six==1.16.0
 toml==0.10.2
 typish==1.9.3
